--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "gh-page": "git subtree push --prefix dist origin gh-pages"
   },
   "devDependencies": {
     "vite": "^2.3.0"
